--- a/index.html
+++ b/index.html
@@ -186,22 +186,22 @@
     <div class="operate">
         <button class="disorganize">洗牌</button>
         <button class="recall">撤回</button>
-        <button class="lightUp">点亮</button>
-        <button class="selectLevel" level="5" index="0">第一关</button>
+        <button class="lightUp">魔法</button>
+        <button class="selectLevel" level="7" index="0">第一关</button>
         <button class="reset">重置</button>
     </div>
     <div class="levelBox">
         <div>
-            <button level="5" index="0">第一关</button>
-            <button level="8" index="1">第二关</button>
-            <button level="11" index="2">第三关</button>
-            <button level="14" index="3">第四关</button>
-            <button level="17" index="4">第五关</button>
-            <button level="20" index="5">第六关</button>
-            <button level="24" index="6">第七关</button>
-            <button level="29" index="7">第八关</button>
-            <button level="34" index="8">第九关</button>
-            <button level="40" index="9">第十关</button>
+            <button level="7" index="0">第一关</button>
+            <button level="12" index="1">第二关</button>
+            <button level="18" index="2">第三关</button>
+            <button level="24" index="3">第四关</button>
+            <button level="30" index="4">第五关</button>
+            <button level="36" index="5">第六关</button>
+            <button level="44" index="6">第七关</button>
+            <button level="52" index="7">第八关</button>
+            <button level="60" index="8">第九关</button>
+            <button level="70" index="9">第十关</button>
         </div>
     </div>
 
@@ -215,7 +215,6 @@
         const html = document.documentElement;
         const body = document.body;
         const box = document.querySelector('.box');
-        let allGoods = document.querySelectorAll('.goods');
         const selectLevel = document.querySelector('.selectLevel');
         const disorganize = document.querySelector('.disorganize');
         const reset = document.querySelector('.reset');
@@ -228,6 +227,7 @@
         const levelBoxBtn = document.querySelectorAll('.levelBox>div button');
         const chronoscope = document.querySelector('.chronoscope');
         const lightUp = document.querySelector('.lightUp');
+        let allGoods = document.querySelectorAll('.goods');
         let boxGoodsLeft = 0;
         let boxVolume = 0;
         let spacing = 65;
@@ -236,8 +236,10 @@
         let chronoscopeNum = 0;
         let range = 350;
         let lightUpNum = 3;
-        const mutedSVG = '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect opacity="0.01" x="30" y="18" width="13" height="13" fill="#ffffff"/><mask id="icon-1441a00e6a0e536" maskUnits="userSpaceOnUse" x="30" y="18" width="13" height="13" style="mask-type: alpha"><rect x="30" y="18" width="13" height="13" fill="#ffffff"/></mask><g mask="url(#icon-1441a00e6a0e536)"><path d="M40.7348 20.2858L32.2495 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M32.2496 20.2858L40.7349 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></g><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/></svg>',
-              notMutedSVG = '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/><path d="M32 15L32 15C32.6232 15.5565 33.1881 16.1797 33.6841 16.8588C35.1387 18.8504 36 21.3223 36 24C36 26.6545 35.1535 29.1067 33.7218 31.0893C33.2168 31.7885 32.6391 32.4293 32 33" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M34.2359 41.1857C40.0836 37.6953 44 31.305 44 24C44 16.8085 40.2043 10.5035 34.507 6.97906" stroke="#ffffff" stroke-width="4" stroke-linecap="round"/></svg>';
+        const mutedSVG =
+            '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect opacity="0.01" x="30" y="18" width="13" height="13" fill="#ffffff"/><mask id="icon-1441a00e6a0e536" maskUnits="userSpaceOnUse" x="30" y="18" width="13" height="13" style="mask-type: alpha"><rect x="30" y="18" width="13" height="13" fill="#ffffff"/></mask><g mask="url(#icon-1441a00e6a0e536)"><path d="M40.7348 20.2858L32.2495 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M32.2496 20.2858L40.7349 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></g><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/></svg>',
+            notMutedSVG =
+            '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/><path d="M32 15L32 15C32.6232 15.5565 33.1881 16.1797 33.6841 16.8588C35.1387 18.8504 36 21.3223 36 24C36 26.6545 35.1535 29.1067 33.7218 31.0893C33.2168 31.7885 32.6391 32.4293 32 33" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M34.2359 41.1857C40.0836 37.6953 44 31.305 44 24C44 16.8085 40.2043 10.5035 34.507 6.97906" stroke="#ffffff" stroke-width="4" stroke-linecap="round"/></svg>';
 
         const goodsList = [
             'zoon1', 'zoon2', 'zoon3', 'zoon4', 'zoon5', 'zoon6', 'zoon7', 'zoon8', 'zoon9',
@@ -285,11 +287,12 @@
             self.style.padding = 0;
             self.style.top = box.offsetTop + 2 + 'px';
             self.style.left = boxGoodsLeft + box.offsetLeft - self.offsetWidth + 'px';
+            self.style.zIndex = 999;
             setTimeout(() => {
                 newGoods.style.opacity = 1;
                 self.remove();
                 coverGoods();
-            }, 100);
+            }, 200);
             let count = 0;
             let children = [...box.children];
             children.forEach(item => item.getAttribute('mark') == newGoods.getAttribute('mark') && count++);
@@ -348,7 +351,7 @@
             recallNum = 3;
             recall.innerText = `撤回 ${recallNum}`;
             lightUpNum = 3;
-            lightUp.innerText = `点亮 ${lightUpNum}`;
+            lightUp.innerText = `魔法 ${lightUpNum}`;
             chronoscopeNum = 0;
             chronoscope.innerText = chronoscopeNum;
             for (let i = 0; i < number; i++) {
@@ -359,9 +362,35 @@
             allGoods.forEach((item, index) => {
                 item.style.animation = `enter .3s`;
                 item.style.zIndex = index + 1;
+                item.setAttribute('id', index);
+                item.classList.add('grey');
             });
             surplus.innerText = allGoods.length;
-            setTimeout(coverGoods, 300);
+            setTimeout(setGrayCover, 300);
+        }
+
+        function setGrayCover() {
+            for (let i = 0; i < allGoods.length; i++) {
+                allGoods[i].classList.remove('grey');
+                for (let j = i + 1; j < allGoods.length; j++) {
+                    if (isIntersect(allGoods[i], allGoods[j])) {
+                        if (parseInt(allGoods[i].style.zIndex) > parseInt(allGoods[j].style.zIndex)) {
+                            allGoods[j].classList.add('grey');
+                            allGoods[j].setAttribute('cover', allGoods[j].getAttribute('cover') + ',' + allGoods[i].getAttribute('id'));
+                        } else {
+                            allGoods[i].classList.add('grey');
+                            allGoods[i].setAttribute('cover', allGoods[i].getAttribute('cover') + ',' + allGoods[j].getAttribute('id'));
+                        }
+                    }
+                }
+            }
+            allGoods.forEach(item => {
+                if (item.getAttribute('cover')) {
+                    item.setAttribute('cover', item.getAttribute('cover').slice(5));
+                } else {
+                    item.removeAttribute('cover');
+                }
+            });
         }
 
         disorganize.addEventListener('click', () => {
@@ -370,11 +399,13 @@
             disorganize.innerText = `洗牌 ${disorganizeNum}`;
             allGoods.forEach(item => {
                 if (!item.getAttribute('onclick')) return;
-                item.style.transition = 'top .25s, left .25s';
+                item.style.transition = 'top .4s, left .4s';
                 item.style.top = randomNum(155, window.innerHeight - 222) + 'px';
                 item.style.left = randomNum(20 + range, window.innerWidth - 70 - range) + 'px';
+                item.classList.add('grey');
+                item.removeAttribute('cover');
             });
-            setTimeout(coverGoods, 300);
+            setTimeout(setGrayCover, 500);
         });
         disorganize.innerText = `洗牌 ${disorganizeNum}`;
 
@@ -439,28 +470,32 @@
 
         const levelRecord = new Array(levelBoxBtn.length);
         for (let i = 0; i < levelRecord.length; i++) levelRecord[i] = 0;
-        localStorage.getItem('sheep_level_record') || localStorage.setItem('sheep_level_record', JSON.stringify(levelRecord));
+        localStorage.getItem('sheep_level_record') || localStorage.setItem('sheep_level_record', JSON.stringify(
+            levelRecord));
 
         setInterval(() => chronoscope.innerText = ++chronoscopeNum, 1000);
 
         function isIntersect(element1, element2) {
             const rect1 = element1.getBoundingClientRect();
             const rect2 = element2.getBoundingClientRect();
-            return !(rect1.right - 5 < rect2.left || rect1.left > rect2.right - 5 || rect1.bottom - 5 < rect2.top || rect1.top > rect2.bottom - 5);
+            return rect1.right > rect2.left && rect1.left < rect2.right && rect1.bottom > rect2.top && rect1.top < rect2.bottom;
         }
 
         function coverGoods() {
             for (let i = 0; i < allGoods.length; i++) {
-                allGoods[i].classList.remove('grey');
-
-                for (let j = i + 1; j < allGoods.length; j++) {
-                    if(isIntersect(allGoods[i], allGoods[j]) && allGoods[i] != allGoods[j]) {
-                        if(parseInt(allGoods[i].style.zIndex) > parseInt(allGoods[j].style.zIndex)) {
-                            allGoods[j].classList.add('grey');
-                        } else {
-                            allGoods[i].classList.add('grey');
+                if (allGoods[i].getAttribute('cover')) {
+                    const arr = allGoods[i].getAttribute('cover').split(',');
+                    let flag = true;
+                    for (let i = 0; i < arr.length; i++) {
+                        let el = document.querySelector(`[id="${arr[i]}"]`);
+                        if (el && el.getAttribute('onclick') && !el.getAttribute('temp')) {
+                            flag = false;
+                            break;
                         }
                     }
+                    flag && allGoods[i].classList.remove('grey');
+                } else {
+                    allGoods[i].classList.remove('grey');
                 }
             }
         }
@@ -469,10 +504,10 @@
             if (lightUpNum <= 0) return;
             allGoods.forEach(item => item.classList.remove('grey'));
             lightUpNum--;
-            lightUp.innerText = `点亮 ${lightUpNum}`;
+            lightUp.innerText = `魔法 ${lightUpNum}`;
         });
 
-        lightUp.innerText = `点亮 ${lightUpNum}`;
+        lightUp.innerText = `魔法 ${lightUpNum}`;
 
         gameStart(selectLevel.getAttribute('level'));
 
